# nu-plugin-dialog

./: Cargo.toml  LICENSE.md  README.md
src/: confirm.rs  lib.rs  main.rs  multiselect.rs  password.rs  select.rs
src/prompt/: generic_select.rs  mod.rs
