[package]
name = "nu_plugin_dialog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nu_plugin_dialog"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.10.4", features = ["fuzzy-select", "completion"] }
nu-plugin = "0.78.0"
nu-protocol = "0.78.0"
